--- a/Truss.html
+++ b/Truss.html
@@ -17,14 +17,16 @@
 	<script src="Javascript/Nodes/Sensors.js" type="text/javascript"></script>
 	<script src="Javascript/Behaviour.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
-	<script src="Javascript/View/PanZoomHandler.js" type="text/javascript"></script>
+	<script src="Javascript/Control/GeneralControl.js" type="text/javascript"></script>
+	<script src="Javascript/Control/PanZoomHandler.js" type="text/javascript"></script>
 	<script src="Javascript/View/ParameterEditor/Property.js" type="text/javascript"></script>
 	<script src="Javascript/View/ParameterEditor/BannerNode.js" type="text/javascript"></script>
 	<script src="Javascript/View/ParameterEditor/ConfigurationArea.js" type="text/javascript"></script>
 	<script src="Javascript/View/ParameterEditor/PropertyEditor.js" type="text/javascript"></script>
-	<script src="Javascript/View/ParameterEditor/PropertyUpdateNode.js" type="text/javascript"></script>
+	<script src="Javascript/Control/PropertyUpdateNode.js" type="text/javascript"></script>
 	<script src="Javascript/View/Pictures.js" type="text/javascript"></script>
 	<script src="Javascript/View/TrussView.js" type="text/javascript"></script>
+	<script src="Javascript/View/GeneralView.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="../Stylefiles/Truss.css">
 
@@ -35,7 +37,7 @@
 
 </head>
 
-<body style="background-color: #343f48; margin:0px;" onresize="updateResize()">
+<body style="background-color: #343f48; margin:0px;" onresize="control.updateResize()">
 	<section>
 		<div id="mainArea"></div>
 		<div id="footer" style="border:1px solid yellow; position:absolute; left:10px; bottom: 10px;">
@@ -46,22 +48,18 @@
 
 
 		</div>
+		<div style="border: 1px solid yellow; width:20px; height:20px"></div>
 		<script type="text/javascript">
 			var savedState = 0;
 
 			var universe = new Universe(document.getElementById('mainArea'));
-
+			var control = new GeneralControl();
 			var setupTicks = 3;
-
-			// let parentElement = document.getElementById('footer');
 
 			//Main Draw loop
 			function mainLoop(timestamp) {
-
-				//timestamp= Date.now();
 				universe.tick(timestamp / 1000);
 				requestAnimationFrame(mainLoop);
-
 			}
 
 			// Setting up the canvas and ensure other initialization routines are run
@@ -125,19 +123,10 @@
 
 				window.requestAnimationFrame(mainLoop);
 
-				document.getElementById('mainArea').onmousemove = myMove;
-
-
-				document.addEventListener('selectionEvent',
-					function (e) {
-						highlightAndModifyPropertyButtons.call(this, e);
-					}, false);
-
-
-				openBottomPanel(event, 'propertiesDiv');
+				control.openBottomPanel(event, 'propertiesDiv');
 
 				universe.currentNode.element.display = "none";
-				updateResize();
+				control.updateResize();
 
 				
 				let newPanZoomHandler = new PanZoomHandler(universe.currentNode);
@@ -145,291 +134,6 @@
 				setupFooter(document.getElementById('footer'));
 			}
 
-			window.addEventListener('keydown', function (e) {
-				if (!universe.currentWorld.fastEdit) {
-					return;
-				}
-				console.log(e.keyCode);
-				if (e.keyCode == 78) {
-					makeNode();
-				} else if (e.keyCode == 84) {
-					makeTensor();
-				}
-			}, true);
-
-
-			let myX = 3;
-			let myY = 3;
-			let mouseSet = false;
-			/**
-			 * @param  {Event} e
-			 */
-			function myMove(e) {
-				myX = e.pageX;
-				myY = e.pageY;
-			}
-
-			/**
-			 * @param  {Event} e
-			 */
-			function downMouse(e) {
-				mouseSet = true;
-			}
-
-			/**
-			 * @param  {Event} e
-			 */
-			function upMouse(e) {
-				mouseSet = false;
-			}
-
-
-
-			function openBottomPanel(evt, divName) {
-				// Declare all variables
-				var i, tabcontent, tablinks;
-
-				// Get all elements with class="tabcontent" and hide them
-				tabcontent = universe.currentNode.getElements('.tabcontent');
-				// document.getElementsByClassName("tabcontent");
-				for (i = 0; i < tabcontent.length; i++) {
-					tabcontent[i].style.display = "none";
-				}
-
-				// Get all elements with class="tablinks" and remove the class "active"
-				tablinks = universe.currentNode.getElements('.tabsectionbuttons');
-				//document.getElementsByClassName("tabsectionbuttons");
-				for (i = 0; i < tablinks.length; i++) {
-					tablinks[i].classList.remove("active");
-				}
-
-				// Show the current tab, and add an "active" class to the button that opened the tab
-				universe.currentNode.getElement('#' + divName).style.display = "block";
-
-				if (evt)
-					evt.currentTarget.classList.add("active");
-				else
-					universe.currentNode.getElement('#' + "propertiesButton").classList.add("active");
-			}
-
-			/**
-			 * @param  {Event} selectionEvent
-			 */
-			function highlightAndModifyPropertyButtons(selectionEvent) {
-				let select = selectionEvent.detail.selectedObject;
-				let connectionDiv = universe.currentNode.getElement("#connectionDiv");
-
-				if (!select) {
-					connectionDiv.innerHTML = '';
-					return;
-				}
-				let previousSelectedObject = selectionEvent.detail.previousSelectedObject;
-				select.setHighlight(2);
-				if (previousSelectedObject) {
-					previousSelectedObject.setHighlight(0);
-				}
-
-				connectionDiv.innerHTML = '';
-				connectionDiv.appendChild(select.generateconnectionHTML());
-
-				let gravityButton = universe.currentNode.getElement("#gravityButton");
-				let tensorAdder = universe.currentNode.getElement("#tensorAdder");
-
-				if (select.isNode) {
-					gravityButton.style.display = 'inline';
-					tensorAdder.style.display = 'inline';
-				} else {
-					gravityButton.style.display = 'none';
-					tensorAdder.style.display = 'none';
-				}
-			}
-
-			var connectionNode;
-			var connectionNodeEventListener;
-
-			function makeNode() {
-				let selector = document.getElementById('nodeType');
-				let value;
-				if (!selector) {
-					value='Node';
-				} else {
-					value = selector.value;
-				}
-				if (value == 'Node') {
-					let newNode = new Node(universe.currentWorld, universe.currentNode, 'node added', {
-						'localPosition': new Position(1, 1),
-					});
-					universe.select(newNode);
-					//universe.newNode = newNode;
-				}
-			}
-
-			var connectionTensor;
-			var connectionEventListener;
-
-			function makeTensor() {
-				let selectorDropDown = universe.currentNode.getElement('#tensorType');
-				let value = selectorDropDown.value;
-				if (connectionTensor) {
-					// Some tensor is already currently being drawn
-					universe.currentNode.removeTensor(connectionTensor);
-				}
-				connectionTensor = undefined;
-
-				if (value == 'Spring') {
-					connectionTensor = new Spring(universe.selectedObject, universe.currentNode.selector, 100);
-				} else if (value == 'DampenedSpring') {
-					connectionTensor =
-						new Tensor(universe.selectedObject, universe.currentNode.selector, 'spring absorber', {
-							'equilibriumLength': 6,
-							'dampeningConstant': 1,
-							'constant': 100,
-							'color': 'white',
-						});
-				} else if (value == 'PullSpring') {
-					connectionTensor =
-						new Tensor(universe.selectedObject, universe.currentNode.selector, 'pullspring', {
-							'equilibriumLength': 6,
-							'constant': 100,
-						});
-				} else if (value == 'Absorber') {
-					new Tensor(universe.selectedObject, universe.currentNode.selector, 'absorber', {
-						'dampeningConstant': 1,
-					});
-				} else if (value == 'Field') {
-					connectionTensor =
-						new Tensor(universe.selectedObject, universe.currentNode.selector, 'field', {
-							'constant': 0.0001,
-						});
-				}
-				if (connectionTensor && !connectionEventListener) {
-					connectionEventListener = document.addEventListener('selectionEvent', function (e) {
-						if (connectionTensor && universe.selectedObject && universe.selectedObject.isNode) {
-							connectionTensor.sensorAttach();
-							connectionTensor = undefined;
-						}
-					}, false);
-				}
-			}
-
-			function changeDebugLevel() {
-				universe.currentWorld.debugLevel = document.getElementById("debugLevel").value;
-			}
-
-			function addGravityCheat() {
-				let gravityWellLabel = universe.currentWorld.labels.findLabel('gravitywell');
-				if (!gravityWellLabel) {
-					return;
-				}
-				let nodes = gravityWellLabel.getNodes();
-				if (!nodes || nodes.length == 0) {
-					return;
-				}
-				let gravityWell = nodes[0];
-				let constant = gravityWell.constant;
-				if (!constant) {
-					alert('Could not find gravitywell labeled node or field constant for gravity.');
-					return;
-				}
-				universe.currentNode.addTensor(
-					new Tensor(universe.selectedObject, gravityWell, 'gravity field', {
-						'constant': constant,
-						'visible': 0,
-					}));
-			}
-
-			function deleteSelected() {
-				universe.selectedObject.unreference();
-			}
-
-			function selectMainNode() {
-				universe.select(node1);
-			/*
-				let previousSelectedObject = universe.selectedObject;
-				universe.selectedObject = universe.currentNode;
-				let event = new CustomEvent('selectionEvent', {
-					detail: {
-						'selectedObject': universe.selectedObject,
-						'previousSelectedObject': previousSelectedObject,
-						'trussNode': universe.selectedObject.parentObject,
-					},
-					bubbles: true,
-					cancelable: true,
-				});
-				universe.currentNode.element.dispatchEvent(event);*/
-			}
-
-			function updateResize() {
-				universe.currentNode.resize();
-			}
-
-			function movePropertyEdit(configAreaName) {
-				if (configAreaName == 'trussConfigArea') {
-					selectMainNode();
-				}
-				let view = universe.currentNode.getElement("#configview");
-				let container = universe.currentNode.getElement("#" + configAreaName);
-				container.appendChild(view);
-			}
-
-			function getlabel(label) {
-				return universe.currentWorld.labels.findLabel(label);
-			}
-
-			/**
-			 * @param  {Element} backgroundDiv
-			 * @param  {String} text
-			 * @param  {String} value
-			 */
-			function createOption(backgroundDiv, text, value) {
-				let optionDebug = document.createElement('option');
-				if (value) {
-					optionDebug.value = value;
-				} else {
-					optionDebug.value = text;
-				}
-				optionDebug.innerHTML = text;
-				backgroundDiv.appendChild(optionDebug);
-			}
-
-			/**
-			 * @param  {Element} parentElement
-			 */
-			function createDebugDropdown(parentElement) {
-				let debugLevelSelect = document.createElement('select');
-				debugLevelSelect.id = 'debugLevel';
-				debugLevelSelect.classList.add('inputcss');
-				debugLevelSelect.addEventListener('change', function () {
-					changeDebugLevel();
-				}, false);
-				parentElement.appendChild(debugLevelSelect);
-
-				createOption(debugLevelSelect, 'Debug level', '1');
-				createOption(debugLevelSelect, 'Nothing', '0');
-				createOption(debugLevelSelect, 'Only web parts', '1');
-				createOption(debugLevelSelect, 'Only lines', '2');
-				createOption(debugLevelSelect, 'Only nodes', '3');
-				createOption(debugLevelSelect, 'Lines and Nodes', '5');
-				createOption(debugLevelSelect, 'Add speeds', '6');
-				createOption(debugLevelSelect, 'Add acceleration', '7');
-				createOption(debugLevelSelect, 'Add numbers', '10');
-			}
-
-			/**
-			 * @param {Element} parentElement
-			 */
-			function setupFooter(parentElement) {
-				createDebugDropdown(parentElement);
-				let fastEditButton = createSimpleButton(parentElement, 'FastEdit',
-					function () {
-						universe.currentWorld.fastEdit = !universe.currentWorld.fastEdit;
-						if (universe.currentWorld.fastEdit) {
-							this.classList.add('activebutton');
-						} else {
-							this.classList.remove('activebutton');
-						}
-					});
-			}
 
 			init();
 		</script>
