--- a/Truss.html
+++ b/Truss.html
@@ -45,10 +45,7 @@
 			<button type="button" class="simpleButton" onclick="location.href='https://github.com/JoakimGustafsson/Truss/wiki'">Wiki</button>
 			<button type="button" class="simpleButton" onclick="if (universe) {universe.select()}">Configuration</button>
 			<button type="button" class="simpleButton" onclick="">Other</button>
-
-
 		</div>
-		<div style="border: 1px solid yellow; width:20px; height:20px"></div>
 		<script type="text/javascript">
 			var savedState = 0;
 
@@ -88,9 +85,10 @@
 				let scale =
 							// 0.74E-10;	// Molecule
 							// 0.01;		// Cm 
-							 1;			// Meter
+							// 1;			// Meter
 							// 2;			// Meter
 							// 10;			// House
+							15;
 							// 500;			// Complex
 							// 12500000;	// Earth
 							// 9000000000;	// Solar system
@@ -99,7 +97,7 @@
 				let latestNode = new PerformanceTrussNode(latestWorld, undefined, 'truss', {
 					'name': 'MainNode',
 					'worldSize': new Position(scale, scale),
-					'worldOffset': new Position(2.5, 2.5),
+					'worldOffset': new Position(0.5, 0.5),
 				});
 				latestNode.initiate();
 				latestWorld.trussNode = latestNode;
