Simplification of zoom

--- a/Truss.html
+++ b/Truss.html
@@ -27,6 +27,8 @@
 	<script src="Javascript/View/Pictures.js" type="text/javascript"></script>
 	<script src="Javascript/View/TrussView.js" type="text/javascript"></script>
 	<script src="Javascript/View/GeneralView.js" type="text/javascript"></script>
+	
+	<script src="Javascript/Control/Debug.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="../Stylefiles/Truss.css">
 
