--- a/Truss.html
+++ b/Truss.html
@@ -45,7 +45,7 @@
 		<div id="footer" style="border:1px solid yellow; position:absolute; left:10px; bottom: 10px;">
 			<div id="FPSdisplay" style="display: inline-block; color: white;"></div>
 			<button type="button" class="simpleButton" onclick="location.href='https://github.com/JoakimGustafsson/Truss/wiki'">Wiki</button>
-			<button type="button" class="simpleButton" onclick="if (universe) {universe.select()}">Configuration</button>
+			<button type="button" class="simpleButton" onclick="if (universe) {universe.select(universe.currentNode)}">Configuration</button>
 			<button type="button" class="simpleButton" onclick="">Other</button>
 		</div>
 		<script type="text/javascript">
