--- a/Truss.html
+++ b/Truss.html
@@ -16,6 +16,8 @@
 	<script src="Javascript/Nodes/Actuators.js" type="text/javascript"></script>
 	<script src="Javascript/Nodes/Sensors.js" type="text/javascript"></script>
 	<script src="Javascript/Behaviour.js" type="text/javascript"></script>
+	<script src="Javascript/Planet/Planet.js" type="text/javascript"></script>
+	<script src="Javascript/Planet/Grid.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
 	<script src="Javascript/Control/GeneralControl.js" type="text/javascript"></script>
 	<script src="Javascript/Control/PanZoomHandler.js" type="text/javascript"></script>
