--- a/Truss.html
+++ b/Truss.html
@@ -138,7 +138,7 @@
 				let newPanZoomHandler = new PanZoomHandler(universe.currentNode);
 
 				setupFooter(document.getElementById('footer'));
-				lastDebug();
+				//lastDebug();
 			}
 
 			function lastDebug() {
