--- a/Truss.html
+++ b/Truss.html
@@ -49,8 +49,9 @@
 			<div id="FPSdisplay" style="display: inline-block; color: white;"></div>
 			<button type="button" class="simpleButton"
 				onclick="location.href='https://github.com/JoakimGustafsson/Truss/wiki'">Wiki</button>
-			<button type="button" class="simpleButton"
+				<button type="button" class="simpleButton"
 				onclick="if (universe) {universe.select(universe.currentNode)}">Configuration</button>
+				<button type="button" class="simpleButton" onclick="toggleDisplay()">Debug</button>
 			<button type="button" class="simpleButton" onclick="">Other</button>
 		</div>
 		<script type="text/javascript">
@@ -58,7 +59,13 @@
 
 			var universe = new Universe(document.getElementById('mainArea'));
 			var control = new GeneralControl();
+			var debugEntity;
 			var setupTicks = 3;
+
+
+			function toggleDisplay(){
+				debugEntity.debugWindow.toggleDisplay();
+			}
 
 			//Main Draw loop
 			function mainLoop(timestamp) {
@@ -105,7 +112,7 @@
 				let latestNode = new PerformanceTrussNode(latestWorld, undefined, 'truss', {
 					'name': 'MainNode',
 					'worldSize': new Position(scale, scale),
-					'worldOffset': new Position(0.9, 0.9),
+					'worldOffset': new Position(0, 0),
 				});
 				latestNode.initiate();
 				latestWorld.trussNode = latestNode;
@@ -139,6 +146,8 @@
 
 				setupFooter(document.getElementById('footer'));
 				//lastDebug();
+				
+			    debugEntity = new Debug(document.getElementById('mainArea'))
 			}
 
 			function lastDebug() {
