--- a/Truss.html
+++ b/Truss.html
@@ -15,7 +15,8 @@
 	<script src="Javascript/Tensors.js" type="text/javascript"></script>
 	<script src="Javascript/Nodes/Actuators.js" type="text/javascript"></script>
 	<script src="Javascript/Nodes/Sensors.js" type="text/javascript"></script>
-	<script src="Javascript/Behaviour.js" type="text/javascript"></script>
+	<script src="Javascript/Behaviours/Behaviour.js" type="text/javascript"></script>
+	<script src="Javascript/Behaviours/Collision.js" type="text/javascript"></script>
 	<script src="Javascript/Planet/Planet.js" type="text/javascript"></script>
 	<script src="Javascript/Planet/Grid.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
