Got saving and loading to work

--- a/Truss.html
+++ b/Truss.html
@@ -163,7 +163,7 @@
 				control.updateResize();
 
 
-				let newPanZoomHandler = new PanZoomHandler(universe.currentNode);
+				//let newPanZoomHandler = new PanZoomHandler(universe.currentNode);
 
 				setupFooter(document.getElementById('footer'));
 				//lastDebug();
@@ -171,7 +171,7 @@
 				debugEntity = new Debug(document.getElementById('mainArea'))
 
 
-				universe.currentWorld.debugLevel = 10;
+				universe.currentWorld.debugLevel = 5;
 			}
 
 			function lastDebug() {
